--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -96,14 +96,16 @@ plot(emm_pop_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
   geom_text(aes(label = c("a", "a", "a", "b", "b", "a", "a", "a", "a", "a", "a", "a", "b", "c", "a", "b", "ab", "a", "a", "a", "a", "a", "a", "a",
                           "a", "a", "a", "a", "b", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "b", "a", "a", "a", "a", "a", "a", "a", "a")),
             vjust = -1, size = 7) +
+  xlim(0, 1.0) +
   labs(title = "Palmer Biomass Reduction - POST", 
        x = "Biomass Reduction (%)", 
-       y = "Population") + 
+       y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 38, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 32, colour = "darkgreen"), 
-         axis.text = element_text(face = "bold", size = 18, colour = "black"),
-         strip.text = element_text(face = "bold", size = 25, colour = "black")) +
+         axis.text = element_text(face = "bold", size = 22, colour = "black"),
+         strip.text = element_text(face = "bold", size = 25, colour = "black"),
+         panel.spacing = unit(2.0, "lines")) +
   ggsave("LOGIT Tukey HSD_POPxHERBxRATE.jpeg", units="in", width=30, height=7, dpi=600)
 
 ```
