--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -99,6 +99,8 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
        x = "Biomass Reduction (%)", 
        y = "Herbicide") +
   facet_grid(~ rate) +
+  scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
+    labels = scales::percent_format(scale = 100, suffix = "")) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 16, colour = "darkgreen"), 
@@ -109,4 +111,5 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
 
 
 ```
+
 
