--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -107,7 +107,8 @@ plot(emm_pop_herb, adjust = "tukey", comparisons = T, alpha = 0.05) +
                           "a", "a", "a", 
                           "a", "a", "a")),
             vjust = -1, size = 5) +
-  xlim(0, 1.0) + 
+  scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
+    labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(title = "Palmer Count Reduction - PRE", 
        x = "Count Reduction (%)", 
        y = "Accession") + 
@@ -116,7 +117,7 @@ plot(emm_pop_herb, adjust = "tukey", comparisons = T, alpha = 0.05) +
          axis.title = element_text(face = "bold", size = 22, colour = "darkgreen"), 
          axis.text = element_text(face = "bold", size = 15, colour = "black"),
          strip.text = element_text(face = "bold", size = 18, colour = "black"),
-         panel.spacing = unit(1.5, "lines")) +
+         panel.spacing = unit(1.0, "lines")) +
   ggsave("LOGIT Tukey HSD_POPxHERB.jpeg", units="in", width = 15, height = 3, dpi = 600)
 
 
@@ -129,7 +130,8 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
                           "b", "a", "a", "a", "a", 
                           "b", "a", "a", "a", "a")),
             vjust = -1, size = 5) +
-  xlim(0, 1.0) +
+  scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
+    labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(title = "Palmer Count Reduction - PRE", 
        x = "Count Reduction (%)", 
        y = "Herbicide") + 
