--- a/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -94,17 +94,19 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
   geom_text(aes(label = c("c", "b", "a", "a", "a",
                           "b", "a", "a", "a", "a",
                           "b", "a", "a", "a", "a")),
-            vjust = -1, size = 3.5) +
+            vjust = -1, size = 4) +
+    scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
+    labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(title = "Waterhemp Count Reduction - PRE", 
        x = "Count Reduction (%)", 
        y = "Herbicide") + 
-  facet_grid(rate ~ .) +
+  facet_grid(~ rate) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 22, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text = element_text(face = "bold", size = 13, colour = "black"),
          strip.text = element_text(face = "bold", size = 18, colour = "black")) +
-  ggsave("LOGIT Tukey HSD_HERBxRATE.jpeg", units="in", width = 10, height = 7, dpi = 600)
+  ggsave("LOGIT Tukey HSD_HERBxRATE.jpeg", units="in", width = 10, height = 4, dpi = 600)
 
 ```
 
