--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
@@ -75,7 +75,7 @@ pop_main_pool <- waterhemp %>% filter(tested_ima_gly_atraz == "x")
 base + 
   geom_point(data = pop_main_pool, 
              mapping = aes(x = long, y = lat, group = pop, label = pop, color = resistance_1x), 
-             size = 2) +
+             size = 2.5) +
   geom_polygon(data = county, 
                fill = "NA", 
                color = "gray") +
@@ -85,7 +85,7 @@ base +
                    box.padding   = 0.5, 
                    point.padding = 0.2,
                    segment.color = 'grey50', 
-                   size = 3,
+                   size = 4,
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
@@ -98,14 +98,14 @@ base +
         panel.grid.major = element_line(color = "white"), 
         panel.grid.minor = element_blank(),
         panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 16, colour = "black", face = "bold", hjust = 1),
+        legend.title = element_text(size = 16, colour = "black", face = "bold", hjust = 0),
         legend.text = element_text(size = 16, colour = "black"), 
         legend.key = element_rect(fill = NA),
-        legend.key.width = unit(2.2, "line"),
-        legend.position = c(- 0.03, 0), 
+        legend.key.width = unit(0.5, "line"),
+        legend.position = c(0.6, 0.8), 
         legend.background = element_rect(fill =NA), 
         plot.title = element_text(color = "darkgreen", face = "bold", size = 22, hjust = 0.5)) +
-  ggsave("MAP_POPMAINPOOL_1X.jpeg", units = "in", width = 8, height = 8, dpi = 600)
+  ggsave("MAP_POPMAINPOOL_1X.jpeg", units = "in", width = 10, height = 10, dpi = 600)
 
 
 ```
@@ -132,7 +132,7 @@ pop_all_herbs <- waterhemp %>% filter(tested_all_herbs == "x")
 base + 
   geom_point(data = pop_all_herbs, 
              mapping = aes(x = long, y = lat, group = pop, label = pop, color = resistance_1x), 
-             size = 2) +
+             size = 2.5) +
   geom_polygon(data = county, 
                fill = "NA", 
                color = "gray") +
@@ -142,7 +142,7 @@ base +
                    box.padding   = 0.5, 
                    point.padding = 0.2,
                    segment.color = 'grey50', 
-                   size = 3,
+                   size = 4,
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
@@ -155,14 +155,14 @@ base +
         panel.grid.major = element_line(color = "white"), 
         panel.grid.minor = element_blank(),
         panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 16, colour = "black", face = "bold", hjust = 1),
+        legend.title = element_text(size = 16, colour = "black", face = "bold", hjust = 0),
         legend.text = element_text(size = 16, colour = "black"), 
         legend.key = element_rect(fill = NA),
-        legend.key.width = unit(2.2, "line"),
-        legend.position = c(- 0.03, 0), 
+        legend.key.width = unit(0.5, "line"),
+        legend.position = c(0.6, 0.8), 
         legend.background = element_rect(fill =NA), 
         plot.title = element_text(color = "darkgreen", face = "bold", size = 22, hjust = 0.5)) +
-  ggsave("MAP_POPALLHERBS_1X.jpeg", units = "in", width = 8, height = 8, dpi = 600)
+  ggsave("MAP_POPALLHERBS_1X.jpeg", units = "in", width = 10, height = 10, dpi = 600)
 
 
 
