--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -31,9 +31,9 @@ waterhemp$run <- as.factor(waterhemp$run)
 
 waterhemp$pop <- as.factor(waterhemp$pop)
 
-waterhemp$herb <- as.factor(waterhemp$herb)
+waterhemp$Herbicide <- as.factor(waterhemp$Herbicide)
 
-waterhemp$rate <- as.factor(waterhemp$rate)
+waterhemp$Dose <- as.factor(waterhemp$Dose)
 
 waterhemp$rep <- as.factor(waterhemp$rep)
 
@@ -46,7 +46,7 @@ str(waterhemp)
 
 ```{r}
 
-model <- glmmTMB(logit(bio_red) ~ herb * rate + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
+model <- glmmTMB(logit(bio_red) ~ Herbicide * Dose + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
 
 
 ```
@@ -74,14 +74,14 @@ glmmTMB:::Anova.glmmTMB(model)
 
 ```{r, echo=TRUE}
 
-emm_herb_rate <- emmeans(model, ~ herb|rate, adjust = "tukey", type = "response", contr = "pairwise")
+emm_herb_dose <- emmeans(model, ~ Herbicide|Dose, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_herb_rate
+emm_herb_dose
 
-CLD_emm_herb_rate <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_herb_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
+CLD_emm_herb_dose <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb_dose$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_herb_rate
+CLD_emm_herb_dose
 
 ```
 
@@ -90,7 +90,8 @@ CLD_emm_herb_rate
 
 ```{r, echo=TRUE}
 
-plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) + 
+
+plot(emm_herb_dose, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 2) +
   geom_text(aes(label = c("b", "b", "b", "a", "a", "c", "d", "a",
                           "a", "a", "a", "a", "a", "b", "c", "a")),
@@ -100,7 +101,7 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
   labs(title = "Waterhemp Biomass Reduction - POST", 
        x = "Biomass Reduction (%)", 
        y = "Herbicide") +
-  facet_grid(~ rate) +
+  facet_grid(~ Dose, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 16, colour = "darkgreen"), 
