--- a/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -31,9 +31,9 @@ waterhemp$run <- as.factor(waterhemp$run)
 
 waterhemp$pop <- as.factor(waterhemp$pop)
 
-waterhemp$herb <- as.factor(waterhemp$herb)
+waterhemp$Herbicide <- as.factor(waterhemp$Herbicide)
 
-waterhemp$rate <- as.factor(waterhemp$rate)
+waterhemp$Dose <- as.factor(waterhemp$Dose)
 
 waterhemp$rep <- as.factor(waterhemp$rep)
 
@@ -46,7 +46,7 @@ str(waterhemp)
 
 ```{r}
 
-model <- glmmTMB(logit(count_red) ~ herb * rate + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
+model <- glmmTMB(logit(count_red) ~ Herbicide * Dose + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
 
 ```
 
@@ -73,14 +73,14 @@ glmmTMB:::Anova.glmmTMB(model)
 
 ```{r, echo=TRUE}
 
-emm_herb_rate <- emmeans(model, ~ herb|rate, adjust = "tukey", type = "response", contr = "pairwise")
+emm_herb_dose <- emmeans(model, ~ Herbicide|Dose, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_herb_rate
+emm_herb_dose
 
-CLD_emm_herb_rate <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_herb_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
+CLD_emm_herb_dose <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb_dose$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_herb_rate
+CLD_emm_herb_dose
 
 ```
 
@@ -89,7 +89,7 @@ CLD_emm_herb_rate
 
 ```{r, echo=TRUE}
 
-plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) + 
+plot(emm_herb_dose, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 1) +
   geom_text(aes(label = c("c", "b", "a", "a", "a",
                           "b", "a", "a", "a", "a",
@@ -100,12 +100,12 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
   labs(title = "Waterhemp Count Reduction - PRE", 
        x = "Count Reduction (%)", 
        y = "Herbicide") + 
-  facet_grid(~ rate) +
+  facet_grid(~ Dose, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 22, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text = element_text(face = "bold", size = 13, colour = "black"),
-         strip.text = element_text(face = "bold", size = 18, colour = "black")) +
+         strip.text = element_text(face = "bold", size = 13, colour = "black")) +
   ggsave("LOGIT Tukey HSD_HERBxRATE.jpeg", units="in", width = 10, height = 4, dpi = 600)
 
 ```
