--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
@@ -89,9 +89,9 @@ base +
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "Putative-Resistance 1x Dose", values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick" )) +
+  scale_color_manual(name = "1× Dose Herbicide Ineffectiveness", values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick" )) +
   theme_map() +
-  labs(fill="", y = "Latitude", x = "Longitude", title = "Waterhemp Putative-Resistance in WI - 1x POST") +
+  labs(fill="", y = "Latitude", x = "Longitude", title = "Waterhemp Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
         axis.title=element_blank(), 
         panel.background = element_rect(fill="white", color = "black"), 
@@ -104,7 +104,7 @@ base +
         legend.key.width = unit(0.5, "line"),
         legend.position = c(-0.15, 0.05), 
         legend.background = element_rect(fill =NA), 
-        plot.title = element_text(color = "darkgreen", face = "bold", size = 22, hjust = 0.5)) +
+        plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
   ggsave("MAP_POPMAINPOOL_1X.jpeg", units = "in", width = 13, height = 10, dpi = 600)
 
 
