--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
@@ -104,7 +104,7 @@ base +
         legend.key.width = unit(0.5, "line"),
         legend.position = c(-0.15, 0.05), 
         legend.background = element_rect(fill =NA), 
-        plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
+        plot.title = element_text(color = "darkgreen", face = "bold", size = 30 %>% , hjust = 0.5)) +
   ggsave("MAP_POPMAINPOOL_1X.jpeg", units = "in", width = 13, height = 10, dpi = 600)
 
 
