--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -33,7 +33,7 @@ palmer$pop <- as.factor(palmer$pop)
 
 palmer$herb <- as.factor(palmer$herb)
 
-palmer$rate <- as.factor(palmer$rate)
+palmer$Dose <- as.factor(palmer$Dose)
 
 palmer$rep <- as.factor(palmer$rep)
 
@@ -46,7 +46,7 @@ str(palmer)
 
 ```{r}
 
-model <- glmmTMB(logit(bio_red) ~ pop * herb * rate + (1|run), data = palmer, family = "gaussian")
+model <- glmmTMB(logit(bio_red) ~ pop * herb * Dose + (1|run), data = palmer, family = "gaussian")
 
 ```
 
@@ -73,14 +73,14 @@ glmmTMB:::Anova.glmmTMB(model)
 
 ```{r, echo=TRUE}
 
-emm_pop_herb_rate <- emmeans(model, ~ pop|herb|rate, adjust = "tukey", type = "response", contr = "pairwise")
+emm_pop_herb_Dose <- emmeans(model, ~ pop|herb|Dose, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_pop_herb_rate
+emm_pop_herb_Dose
 
-CLD_emm_pop_herb_rate <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_pop_herb_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
+CLD_emm_pop_herb_Dose <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_pop_herb_Dose$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_pop_herb_rate
+CLD_emm_pop_herb_Dose
 
 
 ```
@@ -90,9 +90,11 @@ CLD_emm_pop_herb_rate
 
 ```{r, echo=TRUE}
 
-plot(emm_pop_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) + 
+dose_labels <- c("1x" = "Dose: 1x", "3x" = "Dose: 3x")
+
+plot(emm_pop_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 4) +
-  facet_grid(rate ~ herb, labeller = label_value) +
+  facet_grid(Dose ~ herb, labeller = labeller(Dose = dose_labels)) +
   geom_text(aes(label = c("a", "a", "a", "b", "b", "a", "a", "a", "a", "a", "a", "a", "b", "c", "a", "b", "ab", "a", "a", "a", "a", "a", "a", "a",
                           "a", "a", "a", "a", "b", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "b", "a", "a", "a", "a", "a", "a", "a", "a")),
             vjust = -1, size = 7) +
@@ -107,7 +109,7 @@ plot(emm_pop_herb_rate, adjust = "tukey", comparisons = T, alpha = 0.05) +
          axis.text = element_text(face = "bold", size = 22, colour = "black"),
          strip.text = element_text(face = "bold", size = 25, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("LOGIT Tukey HSD_POPxHERBxRATE.jpeg", units="in", width=30, height=7, dpi=600)
+  ggsave("LOGIT Tukey HSD_POPxHERBxDOSE.jpeg", units="in", width=30, height=7, dpi=600)
 
 ```
 
